--- a/RYT/Views/Shared/_Layout.cshtml
+++ b/RYT/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v6.5.1/css/all.css" />
     <link rel="stylesheet" type="text/css" href="~/css/teacher_signup.css" />
+    <link rel="stylesheet" href="~/css/TeacherLogin.css?v6" />
 </head>
 <body>
   
