modeling and project services setup

--- a/RYT/Views/Dashboard/ChangePassword.cshtml
+++ b/RYT/Views/Dashboard/ChangePassword.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="RYTS-16-rectangle">
+﻿@{
+    ViewData["Title"] = "Change Password";
+}
+<div class="RYTS-16-rectangle">
     <img src="~/image/Rectangle 307.jpg" />
     <div class="RYTS-16-rectangletext">
         <p>Profile</p>
