--- a/RYT/Views/Dashboard/Messages.cshtml
+++ b/RYT/Views/Dashboard/Messages.cshtml
@@ -1,5 +1,6 @@
-﻿
-
+﻿@{
+    ViewData["Title"] = "Messages";
+}
 <div class="ryt-13- container main-div">
     <div class="ryt-13-">
         <h2 class="ryt-13-messaging_title">Messages</h2>
