--- a/RYT/Views/Dashboard/Overview.cshtml
+++ b/RYT/Views/Dashboard/Overview.cshtml
@@ -2,5 +2,73 @@
     ViewData["Title"] = "Overview";
 }
 
-<h3>Good morning Francis,</h3>
-<div>Welcome to your Dashboard</div>
+<div class="ryts-9-container-RYTS-9">
+    <div class="ryts-9-welcome-panel">
+        <div id="ryts-9-greeting-area">
+            <div class="ryts-9-greetings">Good afternoon Patience,</div>
+            <p id="ryts-9-greeting-area2">Welcome to your Dashboard <img id="ryts-9-emoji-image" src="/Images/ryts-9-emoji.png" /></p>
+        </div>
+    </div>
+
+    <div class="ryts-9-wallet-panel">
+        <div class="ryts-9-balance-panel">
+            <div class="ryts-9-balance-area1">
+                <div id="ryts-9-wallet-balance">My Wallet Balance</div>
+                <div id="ryts-9-withdraw-area"><a href="#">Withdraw</a></div>
+                @* <div id="withdraw-area" >Withdraw</div> *@
+            </div>
+            <div class="ryts-9-balance-area2">
+                <p id="ryts-9-funds-area">N28,500</p>
+                <p id="ryts-9-active-area">Active</p>
+            </div>
+        </div>
+
+        <div class="ryts-9-received-panel">
+            <div class="ryts-9-inner-received-panel">
+                <div class="ryts-9-money-box">
+                    <p id="ryts-9-total-money">Total money received</p>
+                    <p id="ryts-9-total-money-area">N28,500</p>
+                </div>
+                <div class="ryts-9-button-area">
+                    <img id="ryts-9-send-icon" src="/Images/ryt-9-icon.png" />
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="ryts-9-transaction-history-panel">Transaction History</div>
+
+    <div class="ryts-9-frame-18">
+        <div class="ryts-9-frame-19">
+            <div class="ryts-9-frame-1a">
+
+                <div class="ryts-9-frame-1b">
+                    <span class="ryts-9-received">Received</span>
+                    <div class="ryts-9-divider-1c"></div>
+                </div>
+                <span class="ryts-9-sent">Sent</span>
+            </div>
+            <div class="ryts-9-divider-1d"></div>
+        </div>
+        <div class="ryts-9-frame-1e">
+            <div class="ryts-9-frame-1f">
+                <span class="ryts-9-description">Description</span><span class="ryts-9-amount-sent">Amount</span><span class="ryts-9-date-time">Date/Time</span><span class="ryts-9-action">Action</span>
+            </div>
+            <div class="ryts-9-frame-20">
+                <span class="ryts-9-you-sent">Olajumoke sent you a reward</span><span class="ryts-9-n-21">N15,000</span><span class="ryts-9-date-time-22">4/08/2022 - 4:45pm</span><span class="ryts-9-view-profile"><a id="ryts-9-view-profile-color" href="#">View profile</a></span>
+            </div>
+            <div class="ryts-9-divider-23"></div>
+            <div class="ryts-9-frame-24">
+                <span class="ryts-9-you-sent-25">Obinna sent you a reward</span><span class="ryts-9-n-21">N10,000</span><span class="ryts-9-date-time-22">10/06/2022 - 3:00pm</span><span class="ryts-9-view-profile"><a id="ryts-9-view-profile-color" href="#">View profile</a></span>
+            </div>
+            <div class="ryts-9-divider-28"></div>
+            <div class="ryts-9-frame-24">
+                <span class="ryts-9-you-sent-25">You withdrew money from your wallet</span><span class="ryts-9-n-21">N35,000</span><span class="ryts-9-date-time-22">5/04/2022 - 1:45pm</span><span class="ryts-9-view-profile"><a id="ryts-9-view-profile-color" href="#">View profile</a></span>
+            </div>
+            <div class="ryts-9-divider-28"></div>
+        </div>
+
+    </div>
+
+
+</div>
