--allow-empty-message

--- a/RYT/Views/Account/Login.cshtml
+++ b/RYT/Views/Account/Login.cshtml
@@ -51,7 +51,7 @@
             </div>
         </div>
         <div class="RYTS-19-text-12">
-            <span class="RYTS-19-dont-have-account">Don’t have an account? </span><span class="RYTS-19-sign-up">Sign Up</span>
+            <span class="RYTS-19-dont-have-account">Don’t have an account? </span><a asp-action="signup" class="RYTS-19-sign-up">Sign Up</a>
         </div>
     </div>
 </div>
