--- a/RYT/Views/Account/TeacherSignUpStep2.cshtml
+++ b/RYT/Views/Account/TeacherSignUpStep2.cshtml
@@ -84,7 +84,7 @@
                 </div>
                 <div class="ryts-11-login py-4 mt-3">
                     <span>Already have an account? </span>
-                    <span class="ps-2 "><a href="#">Login</a></span>
+                    <span class="ps-2 "><a asp-action="Login">Login</a></span>
                 </div>
             </div>
         </div>
