--- a/RYT/wwwroot/css/teacher-funding-received.css
+++ b/RYT/wwwroot/css/teacher-funding-received.css
@@ -82,6 +82,9 @@
     text-align: center;
     color: white;
     line-height: 20px;
+    cursor: pointer; /* Add cursor property to make it visually clear it's clickable */
+    border: none; /* Remove default button border */
+    outline: none; /* Remove default button outline */
 }
 
     #ryts-9-withdraw-area a {
@@ -297,7 +300,7 @@
     flex-shrink: 0;
     position: relative;
     width: 880px;
-    height: 240px;
+    height: 200px;
     background: #ffffff;
     z-index: 29;
 }
@@ -336,7 +339,7 @@
     position: absolute;
     height: 20px;
     top: 12px;
-    left: 350px;
+    left: 390px;
     color: #101828;
     font-family: Inter;
     font-size: 14px;
@@ -354,7 +357,7 @@
     position: absolute;
     height: 20px;
     top: 12px;
-    left: 550px;
+    left: 560px;
     color: #101828;
     font-family: Inter;
     font-size: 14px;
@@ -371,6 +374,7 @@
     height: 20px;
     margin: 18px 0 0 37px;
     z-index: 34;
+    line-height: 20px;
 }
 
 .ryts-9-you-sent {
@@ -380,7 +384,7 @@
     position: absolute;
     height: 20px;
     top: 0;
-    left: 0;
+    left: 38px;
     color: #101828;
     font-family: Inter;
     font-size: 14px;
@@ -398,7 +402,7 @@
     position: absolute;
     height: 20px;
     top: 0;
-    left: 315px;
+    left: 393px;
     color: #101828;
     font-family: Inter;
     font-size: 14px;
@@ -416,7 +420,7 @@
     position: absolute;
     height: 20px;
     top: 0;
-    left: 480px;
+    left: 528px;
     color: #101828;
     font-family: Inter;
     font-size: 14px;
@@ -451,7 +455,7 @@
     position: absolute;
     height: 20px;
     top: 0;
-    left: 0;
+    left:38px;
     color: #101828;
     font-family: Inter;
     font-size: 14px;
@@ -462,23 +466,7 @@
     z-index: 39;
 }
 
-.ryts-9-n-26 {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    position: absolute;
-    height: 20px;
-    top: 0;
-    left: 361px;
-    color: #101828;
-    font-family: Inter;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 20px;
-    text-align: left;
-    white-space: nowrap;
-    z-index: 40;
-}
+
 
 .ryts-9-date-time-27 {
     display: flex;
@@ -498,14 +486,7 @@
     z-index: 41;
 }
 
-.ryts-9-divider-28 {
-    position: relative;
-    width: 880px;
-    height: 1px;
-    margin: 16px 0 0 0;
-    background: #eeeeee;
-    z-index: 43;
-}
+
 
 
 .ryts-9-action {
@@ -515,7 +496,7 @@
     position: absolute;
     height: 20px;
     top: 12px;
-    left: 740px; /* Adjust the left value according to your layout */
+    left: 770px; /* Adjust the left value according to your layout */
     color: #101828;
     font-family: Inter;
     font-size: 14px;
@@ -533,7 +514,7 @@
     position: absolute;
     height: 20px;
     top: 0;
-    left: 690px;
+    left: 750px;
     font-size: 14px;
     font-weight: 400;
     line-height: 20px;
