--- a/RYT/Views/Dashboard/StudentDashboardTransfer.cshtml
+++ b/RYT/Views/Dashboard/StudentDashboardTransfer.cshtml
@@ -18,9 +18,9 @@
                     <div class="ryt-xlarge" style="font-weight:bold">N60,000</div>
                 </span>
                 <span class="ryt-col " style="width:27.5%">
-                    <div class="ryt-round-xxlarge ryt-card-4 ryt-padding-small ryt-center ryt-margin-bottom ryt-text-white" style="background-color: #6938EF;">Add Money</div>
+                    <div class="ryt-round-xxlarge ryt-card-4 ryt-padding-small ryt-center ryt-margin-bottom ryt-text-white" style="background-color: #6938EF;"><a style="color: white; " href="#">Add Money</a></div>
                     <div class="ryt-right-align ryt-text-green">Active</div>
-                </span>
+                </span>  
             </span>
 
 
