--- a/wwwroot/css/neo.css
+++ b/wwwroot/css/neo.css
@@ -35,6 +35,16 @@
     text-align: left;
 }
 
+#searchCriteria {
+    border: 0.5px solid #6938EF;
+    border-radius: 5px;
+}
+
+#searchCriteria:hover {
+    border: 1px solid #6938EF;
+    outline: none;
+}
+
 #neo-teacher-search {
     width: 880px;
 }
@@ -55,11 +65,12 @@ div .neo-search-icon {
 .neo-search-icon {
     position: absolute;
     left: 0px;
-    width: 7%;
+    width: auto;
     height: 100%;
     align-content: center;
     padding-top: 10px;
-    padding-left: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 #neo-search-input {
@@ -105,13 +116,11 @@ button .neo-img {
 }
 
 .neo-table-container {
-    margin-top: 30px;
+    position: absolute;
+    margin-top: 50px;
     width: 880px;
-    height: 377px;
+    height: auto;
     background: #ffffff;
-}
-
-.neo-table-container {
     text-align: center;
 }
 
@@ -119,7 +128,7 @@ button .neo-img {
     background: #EAECF0;
     text-align: center;
     width: 880px;
-    height: 44px;
+    height: 50px;
     font-weight: 600;
     text-decoration: solid;
 }
@@ -137,6 +146,7 @@ button .neo-img {
 .neo-table-container tr {
     font-size: 14px;
     width: 864px;
+    height: 50px;
     padding-top: 15px;
     padding-bottom: 5px;
     border-bottom-width: 1px;
@@ -151,13 +161,16 @@ button .neo-img {
 
 
 .neo-table-container tr:first-child {
+    position: relative;
     width: 880px;
+    height: 50px;
     border-bottom: none;
     background: #ffffff;
 }
 
 .neo-table-container tr:last-child {
     border-bottom: none;
+    height: 50px;
 }
 
 .neo-table-container tr a {
@@ -170,13 +183,15 @@ button .neo-img {
     color: #6938EF;
 }
 
-
 #neo-pagination {
+    position: fixed;
+    bottom: 0;
+    left: 37%;
     display: flex;
     justify-content: space-between;
+    align-content: center;
     width: 525px;
     height: 50px;
-    margin: 30px 20% 3px 20%;
     padding: 5px 10px;
     font-size: 14px;
     font-weight: 500;
@@ -186,27 +201,31 @@ button .neo-img {
     padding: 10px;
 }
 
-#neo-previous-page {
+.neo-previous-page {
     width: 86px;
     height: 36px;
-    padding: 8px, 14px, 8px, 14px;
+    padding-left: 12px;
+    padding-top: 6px;
     border-radius: 8px;
     border: 1px solid #D0D5DD;
     background: #FFFFFF;
     box-shadow: 0px 1px 2px 0px #1018280D;
+    align-content: center;
 }
 
-#neo-next-page {
+.neo-next-page {
     width: 86px;
     height: 36px;
-    padding: 8px, 14px, 8px, 14px;
+    padding-left: 25px;
+    padding-top: 6px;
     border-radius: 8px;
     border: 1px solid #D0D5DD;
     background: #FFFFFF;
     box-shadow: 0px 1px 2px 0px #1018280D;
+    align-content: center;
 }
 
-#neo-previous-page:hover, #neo-next-page:hover {
+.neo-previous-page:hover, .neo-next-page:hover {
     background: #6938EF;
     color: #ffffff;
 }
