--- a/Views/Dashboard/Teachers.cshtml
+++ b/Views/Dashboard/Teachers.cshtml
@@ -54,21 +54,25 @@
         }
     </table>
 
+    @{
+        var prevDisabled = !Model.PreviousPage ? "disabled" : "";
+        var nextDisabled = !Model.NextPage ? "disabled" : "";
+    }
 
     <div id="neo-pagination">
-        @if (Model.CurrentPage > 1)
-        {
-            <a asp-action="Teachers" asp-route-page="1" asp-route-searchString="@ViewBag.SearchKeyword" class="neo-previous-page">Previous</a>
-            <p>Page @Model.CurrentPage of @Model.TotalPages</p>
-            <a asp-action="Teachers" asp-route-page="@(Model.CurrentPage - 1)" asp-route-searchString="@ViewBag.SearchKeyword" class="neo-next-page">Next</a>
-        }
 
+        
+        <a asp-action="Teachers" asp-route-page="@(Model.CurrentPage - 1) @prevDisabled" class="neo-previous-page"> Previous </a>
+        <p>Page @Model.CurrentPage of @Model.TotalPages</p>
         @if (Model.CurrentPage < Model.TotalPages)
-        {
-            <a asp-action="Teachers" asp-route-page="@(Model.CurrentPage + 1)" asp-route-searchString="@ViewBag.SearchKeyword" class="neo-previous-page">Previous</a>
-            <p>Page @Model.CurrentPage of @Model.TotalPages</p>
-            <a asp-action="Teachers" asp-route-page="@Model.TotalPages" asp-route-searchString="@ViewBag.SearchKeyword" class="neo-next-page">Next</a>
-        }
+            {
+            <a asp-action="Teachers" asp-route-page="@(Model.CurrentPage + 1) @nextDisabled" class="neo-next-page"> Next </a>
+            }
+        else
+            {
+            <span style="cursor:pointer" class ="neo-next-page">Next</span>
+            }
+
     </div>
 
 </div>
