--- a/Views/Dashboard/Teachers.cshtml
+++ b/Views/Dashboard/Teachers.cshtml
@@ -8,23 +8,25 @@
 <Partial name="_SendRewardPartial" />
 <Partial name="_SendRewardSuccessPartial" />
 
-<div id="neo-teacher-info-container">
+<div id="neo-teacher-info-container" style="background: red;">
     <a asp-action="sendReward" class="neo-arrow-back">
         <img class="neo-img" src="~/images/arrow-back.png" /> Go back
     </a>
-    <p class="neo-school-name">Teachers - Mainland Senior High School</p>
+    <p class="neo-school-name">Teacher(s) - Mainland Senior High School</p>
+
+    @* Mainland Senior High School *@
 
     <div id="neo-teacher-search">
         @* <img class="neo-img" src="~/images/filter.png" /> *@
         <label>Filter By: </label>
         <select name="SearchCriteria" id="searchCriteria">
             <option value="All" selected>All</option>
-            <option value="Name" >Name</option>
+            <option value="Name">Name</option>
             <option value="Position">Position</option>
             <option value="Period">Period of Teaching</option>
         </select>
         <form asp-action="Teachers" method="get" id="neo-search-box">
-            <input id="neo-search-input" name="SearchKeyword" placeholder="Name" value="@Model.SearchKeyword" />
+            <input id="neo-search-input" name="SearchKeyword" placeholder="Search" value="@Model.SearchKeyword" />
             <img class="neo-search-icon" src="~/images/search-alt-1.png" />
 
             <button id="neo-search-btn" type="submit">
@@ -48,31 +50,28 @@
         {
             <tr>
                 <td><a href="#" data-bs-target="#sendReward" data-bs-toggle="modal">@(teacher.User?.FirstName + " " + teacher.User?.LastName)</a></td>
-                <td>Head Teacher</td>
+                <td>@teacher.Position</td>
                 <td>@teacher.YearsOfTeaching</td>
             </tr>
         }
     </table>
+
 
     @{
         var prevDisabled = !Model.PreviousPage ? "disabled" : "";
         var nextDisabled = !Model.NextPage ? "disabled" : "";
     }
 
-    <div id="neo-pagination">
-
-        
+    <div id="neo-pagination-panel">
         <a asp-action="Teachers" asp-route-page="@(Model.CurrentPage - 1) @prevDisabled" class="neo-previous-page"> Previous </a>
         <p>Page @Model.CurrentPage of @Model.TotalPages</p>
         @if (Model.CurrentPage < Model.TotalPages)
-            {
+        {
             <a asp-action="Teachers" asp-route-page="@(Model.CurrentPage + 1) @nextDisabled" class="neo-next-page"> Next </a>
-            }
+        }
         else
-            {
-            <span style="cursor:pointer" class ="neo-next-page">Next</span>
-            }
-
+        {
+            <span style="cursor:pointer" class="neo-next-page">Next</span>
+        }
     </div>
-
 </div>
