--- a/wwwroot/css/neo.css
+++ b/wwwroot/css/neo.css
@@ -7,6 +7,7 @@
     height: auto;
     margin-left: 30px;
     font: 'Inter';
+    border: 2px solid red;
 }
 
 .neo-arrow-back {
@@ -116,10 +117,8 @@ button .neo-img {
 }
 
 .neo-table-container {
-    position: absolute;
     margin-top: 50px;
     width: 880px;
-    height: auto;
     background: #ffffff;
     text-align: center;
 }
@@ -161,7 +160,6 @@ button .neo-img {
 
 
 .neo-table-container tr:first-child {
-    position: relative;
     width: 880px;
     height: 50px;
     border-bottom: none;
@@ -183,10 +181,8 @@ button .neo-img {
     color: #6938EF;
 }
 
-#neo-pagination {
-    position: absolute;
-    bottom: -40px;
-    left: 37%;
+#neo-pagination-panel {
+    margin: 40px auto;
     display: flex;
     justify-content: space-between;
     align-content: center;
