--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model LoginViewModel 
+
+@{
     ViewData["Title"] = "Teacher-Login";
 }
 
@@ -15,29 +17,35 @@
             <div class="RYTS-19-frame-6">
                 <div class="RYTS-19-frame-7">
                     <span class="RYTS-19-login-account">Login to your account</span>
-                    <div class="RYTS-19-frame-8">
-                        <div class="RYTS-19-frame-9">
-                            <span class="RYTS-19-text">Email</span>
-                            <div class="RYTS-19-button-default RYTS-19-Style-image">
-                                <img src="~/images/email.png" />
-                                <input placeholder="Type your email" class="RYTS-19-button-default-input RYTS-19-inputplaceholder-19" />
+                    <div asp-validation-summary="All"></div>
+                    <form method="post" asp-action="Login" asp-controller="Account">
+                        <div class="RYTS-19-frame-8">
+
+                            <div class="RYTS-19-frame-9">
+                                <span class="RYTS-19-text">Email</span>
+                                <div class="RYTS-19-button-default RYTS-19-Style-image">
+                                    <img src="~/images/email.png" />
+                                    <input asp-for="Email" placeholder="Type your email" class="RYTS-19-button-default-input RYTS-19-inputplaceholder-19" />
+                                </div>
+                            </div>
+                            <div class="RYTS-19-frame-a">
+                                <span class="RYTS-19-text-password">Password</span>
+                                <div class="RYTS-19-button-default-b RYTS-19-Style-image">
+                                    <img src="~/images/key.png" />
+                                    <input asp-for="Password" placeholder="Type your Password" class="RYTS-19-button-default-input-c RYTS-19-inputplaceholder-19" />
+                                </div>
+                                <button class="RYTS-19-default-button" type="submit">
+                                    <span class="RYTS-19-login">Login</span>
+                                </button>
                             </div>
                         </div>
-                        <div class="RYTS-19-frame-a">
-                            <span class="RYTS-19-text-password">Password</span>
-                            <div class="RYTS-19-button-default-b RYTS-19-Style-image">
-                                <img src="~/images/key.png" />
-                                <input placeholder="Type your Password" class="RYTS-19-button-default-input-c RYTS-19-inputplaceholder-19" />
-                            </div>
-                        </div>
-                    </div>
+                    </form>
+                    
                 </div>
-                <span class="RYTS-19-forgot-password">Forgot password?</span>
+                <a asp-action=""><span class="RYTS-19-forgot-password">Forgot password?</span></a>
             </div>
             <div class="RYTS-19-frame-d">
-                <button class="RYTS-19-default-button">
-                    <span class="RYTS-19-login">Login</span>
-                </button>
+                
                 <div class="RYTS-19-frame-e">
                     <div class="RYTS-19-divider"></div>
                     <span class="RYTS-19-or">Or</span>
