commit Get List of Schools

--- a/Views/Dashboard/SendReward.cshtml
+++ b/Views/Dashboard/SendReward.cshtml
@@ -46,7 +46,7 @@
                 {
                     <div class="LOS-list">
                         <p>
-                            <a asp-action="teachers" asp-controller="dashboard">@school</a>
+                            <a asp-action="teachers" asp-route-schoolName= "@school" asp-controller="dashboard">@school</a>
                         </p>
                         <img src="~/Image/Icon.png"/>
                     </div>
