--- a/Views/Dashboard/Teachers.cshtml
+++ b/Views/Dashboard/Teachers.cshtml
@@ -8,7 +8,7 @@
 <Partial name="_SendRewardPartial" />
 <Partial name="_SendRewardSuccessPartial" />
 
-<div id="neo-teacher-info-container" style="background: red;">
+<div id="neo-teacher-info-container">
     <a asp-action="sendReward" class="neo-arrow-back">
         <img class="neo-img" src="~/images/arrow-back.png" /> Go back
     </a>
