--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v6.5.1/css/all.css" />
     <link rel="stylesheet" type="text/css" href="~/css/teacher_signup.css" />
     <link rel="stylesheet" href="~/css/TeacherLogin.css?v6" />
+    <link rel="stylesheet" href="~/css//ResetPassword.css"/>
 </head>
 <body>
   
