Code refactored for logout

--- a/Views/Dashboard/_Layout.cshtml
+++ b/Views/Dashboard/_Layout.cshtml
@@ -55,8 +55,7 @@
             </div>
             <div class="sperator"></div>
             <div class="side-drawer-inner">
-                <a data-bs-target="#logout" data-bs-toggle="modal"
-                    asp-action="Logout" asp-controller="Account">
+                <a data-bs-target="#logout" data-bs-toggle="modal">
                     <p>Logout</p></a>
             
             </div>
