--- a/wwwroot/css/og-murphy-style.css
+++ b/wwwroot/css/og-murphy-style.css
@@ -11,7 +11,7 @@ p {
 
 .ogm-notify-panel {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     font-family: Inter;
