--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using RYT
 @using RYT.Models
 @using RYT.Models.ViewModels
+@using RYT.Models.Entities
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
