--- a/Views/Dashboard/_Layout.cshtml
+++ b/Views/Dashboard/_Layout.cshtml
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="~/css/og-murphy-style.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/TeacherChangePassword.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/teacher-funding-received.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/teacher-received-sent-history.css" asp-append-version="true" />
     @* <link rel="stylesheet" href="~/UserManagementApp.styles.css" asp-append-version="true" /> *@
 
     <link rel="stylesheet" href="~/css/StudentProfileModal-ryts-2.css" asp-append-version="true" />
