Modified-changes-with-usermanager

--- a/Views/Dashboard/EditProfile.cshtml
+++ b/Views/Dashboard/EditProfile.cshtml
@@ -28,7 +28,7 @@
                     <input asp-for="LastName" type="text" placeholder="John" />
                     <br />
                     <label>Email</label>
-                    <input asp-for="Email" type="text" placeholder="francajohn@gmail.com" />
+                    <input asp-for="Email" readonly type="text" placeholder="francajohn@gmail.com" />
                     <br />
                     <label>Phone Number</label>
                     <input asp-for="PhoneNumber" type="text" placeholder="07045889234" />
